# unrealRenderFarm

./: .env.example  .gitignore  CLAUDE.md  main.py  myExecutor.py  pyproject.toml  requestManager.py  requestSubmitter.py  requestWorker.py
.claude/: settings.local.json
ansible/: AUDIT_REPORT.md  README.md  ansible.cfg  inventory.yml
ansible/group_vars/: all.yml
ansible/playbooks/: setup-autologon.yml  start-workers.yml  status.yml  stop-workers.yml  sync-repo.yml
ansible/scripts/: setup-windows.ps1  setup-winrm.ps1
database/: 1371.json  304f.json  47c7.json  9672.json  f5c7.json
projects/: hrlv.json
static/: main.css
templates/: index.html
templates/partials/: errors.html  jobs.html  projects.html  summary.html  workers.html
tests/: conftest.py  test_api.py  test_render_request.py  test_state_machine.py  test_stuck_jobs.py
util/: client.py  renderRequest.py  retry.py
